--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Bank</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
+  <header>
+    <nav class="navbar bg-body-primary mt-0">
+      <div class="container-fluid" style="background-color: rgb(45, 45, 204);">
+        <a href="#" class="navbar-brand text-white">
+          <i class="fa-solid fa-building-columns fa-2x" style="color: white;"></i>
+          <b class="ms-0">UNI-BANK</span></b>
+        </a>
+      </div>
+    </nav>
+  </header>
   <app-root></app-root>
+  <footer class="text-white p-3" style="background-color: rgb(45, 45, 204);">@2023 UNIBANK,All rights reserved</p>
+  </footer>
 </body>
+
 </html>
