--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/0280763b24.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <nav class="navbar bg-body-primary mt-0">
       <div class="container-fluid" style="background-color: rgb(45, 45, 204);">
         <a href="#" class="navbar-brand text-white">
-          <i class="fa-solid fa-building-columns fa-2x" style="color: white;"></i>
+          <i class="fa-solid fa-building-columns fa-2x ms-2" style="color: white;"></i>
           <b class="ms-0">UNI-BANK</span></b>
         </a>
       </div>
